# fastapi-tutorial

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
cli/: main.py
first_api/: __main__.py
first_api/api/: run.py
first_api/api/basketball/: routes.py
first_api/api/fragebogen/: routes.py
first_api/api/survey/: routes.py
first_api/db/: __init__.py
first_api/forms/: player.py
first_api/schemas/: player.py
tests/: conftest.py  test_basketball.py
