[tool.poetry]
name = "first-api"
version = "0.1.0"
description = ""
authors = ["Daniel Teigland <daniel.teigland.developer@gmail.com>"]
readme = "README.md"
packages = [{include = "first_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"

# [tool.poetry.scripts]
# dev = "first_api"
typer = {extras = ["all"], version = "^0.6.1"}
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
autoflake = "^1.5.3"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
